# telecom_platform

./: .aiignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.junie/: guidelines.md
alembic/: env.py
alembic/versions/: 4a60d3480930_initial_schema_all_tables.py  7612bc16595f_add_payment_composite_index.py  a3bed7802989_add_notification_records_and_number_.py  c926ade31a29_add_ussd_composite_indexes.py  f82745387fe4_add_sms_composite_index.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  keys.py  monitoring.py  notifications.py  numbers.py  payments.py  quota.py  sms.py  ussd.py
app/core/: celery_app.py  config.py  database.py  error_handlers.py  exceptions.py  logging_config.py  redis.py  sync_database.py
app/domain/: api_key.py  application.py  audit.py  mixins.py  notification.py  number.py  payment.py  sms.py  user.py  ussd.py
app/middleware/: audit.py  rate_limit.py  request_id.py
app/providers/: base.py  mock_live.py  sandbox.py
app/repositories/: api_key_repo.py  application_repo.py  audit_repo.py  base.py  notification_repo.py  number_repo.py  payment_repo.py  sms_repo.py  user_repo.py  ussd_repo.py
app/schemas/: api_key.py  auth.py  common.py  monitoring.py  notification.py  number.py  payment.py  sms.py  ussd.py
app/security/: api_key.py  jwt.py  password.py  permissions.py  scopes.py
app/services/: audit_service.py  auth_service.py  notification_service.py  number_service.py  payment_service.py  quota_service.py  sms_service.py  ussd_service.py
app/tasks/: notification_tasks.py  sms_tasks.py
app/utils/: idempotency.py  money.py  msisdn.py  pagination.py  time_utils.py
docker/: Dockerfile
